chore: fix contrast

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -31,7 +31,7 @@ h6 {
 }
 
 *::selection {
-  background-color: #5c52c630;
+  background-color: var(--colorSelection);
 }
 
 .app {
