--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,13 +1,15 @@
+@import "../../variables";
+
 .logo {
   cursor: pointer;
   padding: 3px;
-  color: #5c52c6;
+  color: var(--colorPrimary600);
 
   path {
     transition: fill 0.2s ease;
   }
 
   &:hover {
-    color: #6359d3; /* Lighter shade for hover state */
+    color: var(--colorPrimary500);
   }
 }
