--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -3,7 +3,7 @@
 .navbar {
   background-color: var(--colorNeutral000);
   border-bottom: 0.5px solid var(--colorNeutral200);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
+  box-shadow: var(--shadowNavbar);
   width: 100%;
 }
 
